[package]
name = "webmark"
description = "WebMark is a library and a command that reads the contents, texts and images, of source addresses and saves them as markdown files."
repository = "https://github.com/emuvi/webmark/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2"
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.11", features = ["blocking"] }